--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -35,7 +35,7 @@
                   <div class="information">
                     <a href="/authors/{{ $author | urlize }}" class="author-name">{{ $author }}</a>
                     <p class="designation">Senior Software Engineer</p>
-                    <a href="appscode.com" class="company">AppsCode Inc</a>
+                    <a href="https://appscode.com" target="_blank" class="company">AppsCode Inc</a>
                   </div>
                 </div>
                 <!-- author end -->
