Update author designation loop
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -31,20 +31,25 @@
           <div class="column is-4">
            <div class="is-flex authors">
              <!-- author start  -->
-             {{ range $author := $p.Params.authors }}
              <div class="author">
-               {{ range $author := first 1 $p.Params.authors }}
-               <a href="/authors/{{ $author | urlize }}" class="author-image"><img
-                   src="/assets/images/authors/profile-photos-84x84/{{ $author | urlize}}.jpg"
-                   alt="author-image" height="76" width="76"></a>
-               <div class="information">
-                 <a href="/authors/{{ $author | urlize }}" class="author-name">{{ $author }}</a>
-                 <p class="designation has-text-light">Designation</p>
-                 <a href="https://appscode.com" target="_blank" class="company has-text-light">AppsCode Inc</a>
+               {{ range $authorName := first 1 $p.Params.authors }}
+                  {{$author:=dict}}
+                  {{ range site.Data.authors }}
+                    {{if eq .name $authorName }}
+                      {{ $author = . }}
+                    {{ end }}
+                  {{end}}
+                  <a href="/authors/{{ $authorName | urlize }}" class="author-image"><img
+                      src="{{$author.profile}}"
+                      alt="author-image" height="76" width="76"></a>
+                  <div class="information">
+                 
+                  <a href="/authors/{{ $authorName | urlize }}" class="author-name">{{ $author.name }}</a>
+                  <p class="designation has-text-light">{{$author.designation}}</p>
+                  <a href="https://appscode.com" target="_blank" class="company has-text-light">AppsCode Inc</a>
                </div>
                {{end}}
              </div>
-             {{ end }}
              <!-- author end -->
            </div>
           </div>
@@ -67,7 +72,7 @@
       </div>
     </div>
     <div class="columns is-variable is-1-mobile is-1-tablet is-1-desktop is-1-widescreen is-2-fullhd is-multiline">
-      {{ range $idx, $p := $pages.ByDate.Reverse | first 3 }}
+      {{ range $idx, $p := (first 3 (after 1 $pages.ByDate.Reverse))}}
 
       <div class="column is-4 each-blog">
 
