Update auhtor page hero-area height
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 <!--============================== hero area 2022 start  ==============================-->
-<section class="hero-area-blog">
+<section class="hero-area-blog author-page">
   <div class="container">
     <div class="slider-wrapper">
       <div class="single-slider">
