--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -7,6 +7,9 @@
   min-height: 62vh;
   display: flex;
   align-items: center;
+  &.author-page {
+    min-height: auto;
+  }
 
   .blog-title-content {
     h1 {
