Update author page border color
Signed-off-by: mohin7 <csemohin@gmail.com>

--- a/static/assets/sass/layouts/_author.scss
+++ b/static/assets/sass/layouts/_author.scss
@@ -7,6 +7,12 @@
 .author-content {
   figure {
     margin: 0 auto 15px;
+
+    &.image {
+      img {
+        border: 2px solid $ac-white-light;
+      }
+    }
   }
 }
 
