--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -8,7 +8,7 @@
       <div class="column is-8">
         <div class="author-content has-text-centered" data-aos="fade-up" data-aos-duration="500">
           <figure class="image width-80">
-            <img src="{{ $author.profile }}" loading="lazy" class="is-rounded" decoding="async" />
+            <img src="{{ $author.profile }}" loading="lazy" decoding="async" />
           </figure>
           <h4 class="has-text-light mb-8" data-aos="fade-up" data-aos-duration="600">{{ $author.name }}</h4>
           <p class="has-text-light mb-16" data-aos="fade-up" data-aos-duration="800">
